lib/hostfxr_bindings.dart


  late final _hostfxr_get_runtime_properties_fnPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Int32> Function(
                  hostfxr_handle,
                  ffi.Pointer<ffi.Size>,
                  ffi.Pointer<ffi.Pointer<char_t>>,
                  ffi.Pointer<ffi.Pointer<char_t>>)>>(
      'hostfxr_get_runtime_properties_fn');
  late final _hostfxr_get_runtime_properties_fn =
      _hostfxr_get_runtime_properties_fnPtr.asFunction<
          ffi.Pointer<ffi.Int32> Function(
              hostfxr_handle,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.Pointer<char_t>>,
              ffi.Pointer<ffi.Pointer<char_t>>)>();

  /// Load CoreCLR and run the application for an initialized host context
  ///
  /// Parameters:
  /// host_context_handle
  /// Handle to the initialized host context
  ///
  /// Return value:
  /// If the app was successfully run, the exit code of the application. Otherwise, the error code result.
  ///
  /// The host_context_handle must have been initialized using hostfxr_initialize_for_dotnet_command_line.
  ///
  /// This function will not return until the managed application exits.
  int hostfxr_run_app_fn(
    hostfxr_handle host_context_handle,
  ) {
    return _hostfxr_run_app_fn(
      host_context_handle,
    );
  }

  late final _hostfxr_run_app_fnPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(hostfxr_handle)>>(
          'hostfxr_run_app_fn');
  late final _hostfxr_run_app_fn =
      _hostfxr_run_app_fnPtr.asFunction<int Function(hostfxr_handle)>();

  /// Gets a typed delegate from the currently loaded CoreCLR or from a newly created one.
  ///
  /// Parameters:
  /// host_context_handle
  /// Handle to the initialized host context
  /// type
  /// Type of runtime delegate requested
  /// delegate
  /// An out parameter that will be assigned the delegate.
  ///
  /// Return value:
  /// The error code result.
  ///
  /// If the host_context_handle was initialized using hostfxr_initialize_for_runtime_config,
  /// then all delegate types are supported.
  /// If the host_context_handle was initialized using hostfxr_initialize_for_dotnet_command_line,
  /// then only the following delegate types are currently supported:
  /// hdt_load_assembly_and_get_function_pointer
  /// hdt_get_function_pointer
  int hostfxr_get_runtime_delegate(
    hostfxr_handle host_context_handle,
    int type,
    ffi.Pointer<ffi.Pointer<ffi.Void>> delegate,
  ) {
    return _hostfxr_get_runtime_delegate(
      host_context_handle,
      type,
      delegate,
    );
  }

  late final _hostfxr_get_runtime_delegatePtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(hostfxr_handle, ffi.Int32,
                  ffi.Pointer<ffi.Pointer<ffi.Void>>)>>(
      'hostfxr_get_runtime_delegate');
  late final _hostfxr_get_runtime_delegate =
      _hostfxr_get_runtime_delegatePtr.asFunction<
          int Function(
              hostfxr_handle, int, ffi.Pointer<ffi.Pointer<ffi.Void>>)>();

  /// Closes an initialized host context
  ///
  /// Parameters:
  /// host_context_handle
  /// Handle to the initialized host context
  ///
  /// Return value:
  /// The error code result.
  int hostfxr_close(
    hostfxr_handle host_context_handle,
  ) {
    return _hostfxr_close(
      host_context_handle,
    );
  }

  late final _hostfxr_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(hostfxr_handle)>>(
          'hostfxr_close');
  late final _hostfxr_close =
      _hostfxr_closePtr.asFunction<int Function(hostfxr_handle)>();

  /// Returns available SDKs and frameworks.
  ///
  /// Resolves the existing SDKs and frameworks from a dotnet root directory (if
  /// any), or the global default location. If multi-level lookup is enabled and
  /// the dotnet root location is different than the global location, the SDKs and
  /// frameworks will be enumerated from both locations.
  ///
  /// The SDKs are sorted in ascending order by version, multi-level lookup
  /// locations are put before private ones.
  ///
  /// The frameworks are sorted in ascending order by name followed by version,
  /// multi-level lookup locations are put before private ones.
  ///
  /// Parameters:
  /// dotnet_root
  /// The path to a directory containing a dotnet executable.
  ///
  /// reserved
  /// Reserved for future parameters.
  ///
  /// result
  /// Callback invoke to return the list of SDKs and frameworks.
  /// Structs and their elements are valid for the duration of the call.
  ///
  /// result_context
  /// Additional context passed to the result callback.
  ///
  /// Return value:
  /// 0 on success, otherwise failure.
  ///
  /// String encoding:
  /// Windows     - UTF-16 (pal::char_t is 2 byte wchar_t)
  /// Unix        - UTF-8  (pal::char_t is 1 byte char)
  int hostfxr_get_dotnet_environment_info(
    ffi.Pointer<char_t> dotnet_root,
    ffi.Pointer<ffi.Void> reserved,
    hostfxr_get_dotnet_environment_info_result_fn result,
    ffi.Pointer<ffi.Void> result_context,
  ) {
    return _hostfxr_get_dotnet_environment_info(
      dotnet_root,
      reserved,
      result,
      result_context,
    );
  }

  late final _hostfxr_get_dotnet_environment_infoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<char_t>,
              ffi.Pointer<ffi.Void>,
              hostfxr_get_dotnet_environment_info_result_fn,
              ffi.Pointer<ffi.Void>)>>('hostfxr_get_dotnet_environment_info');
  late final _hostfxr_get_dotnet_environment_info =
      _hostfxr_get_dotnet_environment_infoPtr.asFunction<
          int Function(
              ffi.Pointer<char_t>,
              ffi.Pointer<ffi.Void>,
              hostfxr_get_dotnet_environment_info_result_fn,
              ffi.Pointer<ffi.Void>)>();
}

abstract class hostfxr_delegate_type {
  static const int hdt_com_activation = 0;
  static const int hdt_load_in_memory_assembly = 1;
  static const int hdt_winrt_activation = 2;
  static const int hdt_com_register = 3;
  static const int hdt_com_unregister = 4;
  static const int hdt_load_assembly_and_get_function_pointer = 5;
  static const int hdt_get_function_pointer = 6;
}

/// Predeclaration.
class hostfxr_dotnet_environment_info extends ffi.Struct {
  @ffi.Size()
  external int size;

  external ffi.Pointer<char_t> hostfxr_version;

  external ffi.Pointer<char_t> hostfxr_commit_hash;

  @ffi.Size()
  external int sdk_count;

  external ffi.Pointer<hostfxr_dotnet_environment_sdk_info> sdks;

  @ffi.Size()
  external int framework_count;

  external ffi.Pointer<hostfxr_dotnet_environment_framework_info> frameworks;
}

typedef char_t = ffi.WChar;

class hostfxr_dotnet_environment_sdk_info extends ffi.Struct {
  @ffi.Size()
  external int size;

  external ffi.Pointer<char_t> version;

  external ffi.Pointer<char_t> path;
}

class hostfxr_dotnet_environment_framework_info extends ffi.Struct {
  @ffi.Size()
  external int size;

  external ffi.Pointer<char_t> name;

  external ffi.Pointer<char_t> version;

  external ffi.Pointer<char_t> path;
}

typedef hostfxr_error_writer_fn
    = ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<char_t>)>>;

class hostfxr_initialize_parameters extends ffi.Struct {
  @ffi.Size()
  external int size;

  external ffi.Pointer<char_t> host_path;

  external ffi.Pointer<char_t> dotnet_root;
}

typedef hostfxr_handle = ffi.Pointer<ffi.Void>;
typedef hostfxr_get_dotnet_environment_info_result_fn = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(ffi.Pointer<hostfxr_dotnet_environment_info>,
            ffi.Pointer<ffi.Void>)>>;
